logs/dag_id=ETL_Flow/run_id=manual__2024-04-27T125547.185632+0000/task_id=insert_data_from_files/attempt=8.log
[2024-04-27T19:07:33.720+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: ETL_Flow.insert_data_from_files manual__2024-04-27T12:55:47.185632+00:00 [queued]>
[2024-04-27T19:07:33.739+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: ETL_Flow.insert_data_from_files manual__2024-04-27T12:55:47.185632+00:00 [queued]>
[2024-04-27T19:07:33.741+0000] {taskinstance.py:2193} INFO - Starting attempt 8 of 12
[2024-04-27T19:07:33.771+0000] {taskinstance.py:2214} INFO - Executing <Task(PythonOperator): insert_data_from_files> on 2024-04-27 12:55:47.185632+00:00
[2024-04-27T19:07:33.780+0000] {standard_task_runner.py:60} INFO - Started process 9998 to run task
[2024-04-27T19:07:33.787+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'ETL_Flow', 'insert_data_from_files', 'manual__2024-04-27T12:55:47.185632+00:00', '--job-id', '2810', '--raw', '--subdir', 'DAGS_FOLDER/ETL.py', '--cfg-path', '/tmp/tmp_stwczci']
[2024-04-27T19:07:33.800+0000] {standard_task_runner.py:88} INFO - Job 2810: Subtask insert_data_from_files
[2024-04-27T19:07:33.906+0000] {task_command.py:423} INFO - Running <TaskInstance: ETL_Flow.insert_data_from_files manual__2024-04-27T12:55:47.185632+00:00 [running]> on host d838c4eb4dcc
[2024-04-27T19:07:34.458+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='coder2j' AIRFLOW_CTX_DAG_ID='ETL_Flow' AIRFLOW_CTX_TASK_ID='insert_data_from_files' AIRFLOW_CTX_EXECUTION_DATE='2024-04-27T12:55:47.185632+00:00' AIRFLOW_CTX_TRY_NUMBER='8' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-04-27T12:55:47.185632+00:00'
[2024-04-27T19:07:34.891+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-04-27T19:07:34.923+0000] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 200, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 217, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/data_insertion.py", line 15, in insert_data_from_files
    pg_hook.insert_rows(table=table_name, rows=df.values.tolist())
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 565, in insert_rows
    cur.execute(sql, values)
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 1: ...timestamp,'2024-04-07T10:00:00'::timestamp,'Google','valid')
                                                               ^

[2024-04-27T19:07:34.951+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=ETL_Flow, task_id=insert_data_from_files, execution_date=20240427T125547, start_date=20240427T190733, end_date=20240427T190734
[2024-04-27T19:07:34.980+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 2810 for task insert_data_from_files (INSERT has more expressions than target columns
LINE 1: ...timestamp,'2024-04-07T10:00:00'::timestamp,'Google','valid')
                                                               ^
; 9998)
[2024-04-27T19:07:35.045+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-04-27T19:07:35.105+0000] {warnings.py:109} WARNING - /home/***/.local/lib/python3.8/site-packages/***/models/baseoperator.py:1201: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-04-27T19:07:35.203+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
